--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
     <style>
-        h1 {
+        body {
             font-family: Verdana, sans-serif;
-            /* padding: 10px; */
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            color: white;
         }
 
         header {
-            background-color: lightblue;
+            background-color: navy;
             text-align: center;
             padding: 1%;
+        }
+
+        body {
+            background-color: lightgray;
         }
 
         .quickviews {
             display: flex;
             float: left;
             padding: 10px;
-            width: 55%;
+            width: 50%;
+            display: block;
+        }
+
+        .qv {
+            padding: 10px;
+            margin: 20px;
+            width: 100%;
+            background-image: url('../static/bolton.jpg');
+            background-size: cover;
+            border-radius: 5px;
+            overflow-y: scroll;
+        }
+
+        .qvtxt {
+            display: flex;
+            padding: 5px;
+            justify-content: space-between;
+            background: rgba(204, 204, 204, 0.7);
+            border-radius: 5px;
         }
 
         .mapview {
@@ -25,10 +53,11 @@
             float: right;
             padding: 10px;
             width: 40%;
+            size: 0cap;
         }
 
         .vl {
-            border-left: 2px solid lightgray;
+            border-left: 2px solid gray;
             height: 95%;
             position: absolute;
             left: 57%;
@@ -39,7 +68,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='styles/index.css') }}"> -->
     <title>Document</title>
 </head>
 <header>
@@ -47,9 +75,36 @@
 </header>
 <body>
     
-    <div class="quickviews">test</div>
+    <div class="quickviews">
+        
+        <div class="qv">
+            <div class="qvtxt">
+            <h2>Mtn Name</h2>
+            <h2>XX°</h2>
+            </div>
+            <div class="qvtxt">
+            snow and trail report
+            </div>
+        </div>
+
+        <div class="qv">
+            <div class="qvtxt">
+            <h2>Mtn Name</h2>
+            <h2>XX°</h2>
+            </div>
+            <div class="qvtxt">
+            snow and trail report
+            </div>
+        </div>
+        
+
+
+
+    </div>
     <div class="vl"></div>
-    <div class="mapview">test</div>
+    <div class="mapview">
+        <img src="../static/xlarge.jpg" alt="map" width="100%">
+    </div>
     
 </body>
 </html>
