--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             padding: 10px;
             margin: 20px;
             width: 100%;
-            background-image: url('../static/bolton.jpg');
+            /* background-image: url('../static/backgrounds/Bolton Valley.jpeg'); */
             background-size: cover;
             border-radius: 5px;
             overflow-y: scroll;
@@ -77,7 +77,7 @@
     
     <div class="quickviews">
         
-        <div class="qv">
+        <div class="qv" style='background-image: url("../static/backgrounds/49 Degrees North.jpeg")'>
             <div class="qvtxt">
             <h2>Mtn Name</h2>
             <h2>XX°</h2>
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="qv">
+        <div class="qv" style='background-image: url("../static/backgrounds/Alpine Meadows.jpeg")'>
             <div class="qvtxt">
             <h2>Mtn Name</h2>
             <h2>XX°</h2>
@@ -103,7 +103,7 @@
     </div>
     <div class="vl"></div>
     <div class="mapview">
-        <img src="../static/xlarge.jpg" alt="map" width="100%">
+        <img src="../static/backgrounds/Big Sky.jpeg" alt="map" width="100%">
     </div>
     
 </body>
