--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,12 @@
     
     <div class="quickviews">
         
+        {% for mtn in mtns %}
+
+        <form action="http://127.0.0.1:5000/prepare.html">
+
+        <button></button>
+
         <div class="qv" style='background-image: url("../static/backgrounds/49 Degrees North.jpeg")'>
             <div class="qvtxt">
             <h2>Mtn Name</h2>
@@ -87,15 +93,9 @@
             </div>
         </div>
 
-        <div class="qv" style='background-image: url("../static/backgrounds/Alpine Meadows.jpeg")'>
-            <div class="qvtxt">
-            <h2>Mtn Name</h2>
-            <h2>XX°</h2>
-            </div>
-            <div class="qvtxt">
-            snow and trail report
-            </div>
-        </div>
+        </form>
+
+        {% endfor %}
         
 
 
