--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
     
     <div class="quickviews">
         
-        {% for mtn in mtns %}
+        {% for mtn in mtn_data %}
 
         <form action="http://127.0.0.1:5000/prepare.html">
 
