--- a/templates/index.html
+++ b/templates/index.html
@@ -22,17 +22,17 @@
         }
 
         .quickviews {
-            display: flex;
+            display: flexbox;
             float: left;
             padding: 10px;
             width: 50%;
-            display: block;
         }
 
         .qv {
+            display: block;
             padding: 10px;
             margin: 20px;
-            width: 100%;
+            width: 45%;
             /* background-image: url('../static/backgrounds/Bolton Valley.jpeg'); */
             background-size: cover;
             border-radius: 5px;
@@ -77,10 +77,10 @@
     
     <div class="quickviews">
         
-        {% for mtn in mtn_data[data] %}
-        <div class="qv" style='background-image: url("../static/backgrounds/49 Degrees North.jpeg")'>
+        {% for mtn in mtn_data['data'] %}
+        <div class="qv" style='background-image: url("../static/backgrounds/{{mtn['name']}}.jpeg")'>
             <div class="qvtxt">
-            <h2>{{mtn[0]}}</h2>
+            <h2>{{mtn['name']}}</h2>
             <h2>XX°</h2>
             </div>
             <div class="qvtxt">
