--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
             </div>
             <div class="qvtxt">
                 <form action="http://127.0.0.1:5000/prepare" method="GET">
+                    <input type = "search" name = "mtn_slug" value="{{mtn['slug']}}" hidden/>
                     <input id = "btnSubmit" name = "btnSubmit" type = "submit" value = "Click Here for Snow and Lift Report" >
                 </form>
             </div>
