--- a/templates/index.html
+++ b/templates/index.html
@@ -86,9 +86,9 @@
             <h2>{{mtn['name']}}</h2>
             </div>
             <div class="qvtxt">
-                <form action="http://127.0.0.1:5000/prepare" method="GET">
-                    <input type = "search" name = "mtn_slug" value="{{mtn['slug']}}" hidden/>
+                <form action="http://127.0.0.1:5000/prepare" method="post">
                     <input id = "btnSubmit" name = "btnSubmit" type = "submit" value = "Click Here for Snow and Lift Report" >
+                    <input type = "search" name = "search" value="{{mtn['slug']}}" hidden/>
                 </form>
             </div>
         </div>
