final touches final

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -38,6 +38,10 @@
             display: flex;
             width: 45%;
             float: right;
+            width: 300px;
+            height: 400px;
+            margin-right: 25%;
+            aspect-ratio: 1/1;
         }
 
         .vl {
@@ -88,10 +92,6 @@
             <tr>
                 <td>Location</td>
                 <td>{{mtn['data']['location']}}</td>
-            </tr>
-            <tr>
-                <td>Weather</td>
-                <td>XX°</td>
             </tr>
             <tr>
                 <td>Website</td>
